Complete Lecture 218 - Add new item functionality with UIAlert

--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -31,7 +31,14 @@
                             <outlet property="delegate" destination="teb-l5-kkT" id="d0S-LX-4ug"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="sdZ-x3-aou"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="sdZ-x3-aou">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="xif-GR-SZ6">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="teb-l5-kkT" id="SMQ-et-MNF"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="91b-DO-Qgb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
