--- a/Todoey/Views/Base.lproj/Main.storyboard
+++ b/Todoey/Views/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Todoey-->
+        <!--Items-->
         <scene sceneID="xhy-wL-AHU">
             <objects>
                 <tableViewController id="teb-l5-kkT" customClass="ToDoListViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
@@ -39,7 +39,7 @@
                             <outlet property="delegate" destination="teb-l5-kkT" id="d0S-LX-4ug"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="sdZ-x3-aou">
+                    <navigationItem key="navigationItem" title="Items" id="sdZ-x3-aou">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="xif-GR-SZ6">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -50,7 +50,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="91b-DO-Qgb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1448.8" y="-285.60719640179911"/>
+            <point key="canvasLocation" x="1822" y="-287"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Te0-ar-nxr">
@@ -67,12 +67,50 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="teb-l5-kkT" kind="relationship" relationship="rootViewController" id="CJL-Xh-Uva"/>
+                        <segue destination="7fz-oS-nHB" kind="relationship" relationship="rootViewController" id="kUl-YO-xwu"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JJe-uC-L5a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="509.60000000000002" y="-285.60719640179911"/>
+            <point key="canvasLocation" x="342" y="-287"/>
+        </scene>
+        <!--Todoey-->
+        <scene sceneID="xZL-ER-EzW">
+            <objects>
+                <tableViewController id="7fz-oS-nHB" customClass="CategoryViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7Kq-Dj-LoW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="DPZ-sU-WVT">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DPZ-sU-WVT" id="wu2-Yv-fAE">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="7fz-oS-nHB" id="e4G-70-hcc"/>
+                            <outlet property="delegate" destination="7fz-oS-nHB" id="SSJ-nB-T1R"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Todoey" id="pBa-d3-dfI">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="rdg-EI-qsW">
+                            <connections>
+                                <action selector="addButtonPressed:" destination="7fz-oS-nHB" id="RoJ-M7-8dH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="teb-l5-kkT" kind="show" identifier="goToItems" id="5gT-EK-x5l"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xYl-eP-70s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1092" y="-287"/>
         </scene>
     </scenes>
 </document>
